[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamdiffusion-rt"
version = "0.1.0"
description = "Real-time optimized fork of StreamDiffusion for GPU streaming pipelines"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Orchard9", email = "dev@orchard9.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.24.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "xformers",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "protobuf>=4.25.0",
    "pillow>=9.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt>=8.6.0",
    "cuda-python>=12.0.0",
    "polygraphy>=0.49.0",
    "onnx-graphsurgeon>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/orchard9/streamdiffusion-rt"
Repository = "https://github.com/orchard9/streamdiffusion-rt"
Upstream = "https://github.com/cumulo-autumn/StreamDiffusion"

[tool.hatch.build.targets.wheel]
packages = ["src/streamdiffusion_rt"]

[tool.ruff]
line-length = 100
target-version = "py310"
